fix the loop dependency problem

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -37,7 +37,6 @@ import(DBI)
 import(RSQLite)
 import(dbplyr)
 import(synaptome.data)
-importFrom(BioNAR,buildNetwork)
 importFrom(Rdpack,reprompt)
 importFrom(dplyr,"%>%")
 importFrom(dplyr,collect)
@@ -49,4 +48,5 @@ importFrom(dplyr,rename)
 importFrom(dplyr,select)
 importFrom(dplyr,tbl)
 importFrom(igraph,graph_from_data_frame)
+importFrom(igraph,simplify)
 importFrom(utils,unzip)
